# funstuff

./: LICENSE  README.md
polular/: bower.json  custom_commands.txt  package.json
polular/app/: index.html
polular/app/css/: app.css
polular/app/data/: czasowniki_teraz_odmiany--schema.csv.txt  czasowniki_teraz_odmiany.csv.txt  duplicates.sh  index.csv.txt  index.tsv  liczebniki--schema.csv.txt  liczebniki.csv.txt  slowa--schema.csv.txt  slowa.csv.txt  tryb_rozkaz--schema.csv.txt  tryb_rozkaz.csv.txt  zaimki--schema.csv.txt  zaimki.csv.txt
polular/app/js/: app.js  controllers.js  directives.js  services.js
polular/app/partials/: plindex.html  schema.html
polular_test/: pom.xml
polular_test/src/test/java/core/: HttpClientDataIntegration.java  HttpTransport.java  Response.java  TestBase.java
polular_test/src/test/java/fun/: Fun.java  Fun1.java  Predicate.java
polular_test/src/test/java/pages/: CzasownikiPage.java  HomePage.java  LiczebnikiPage.java  Page.java  QuizPage.java  QuizPassingPage.java  SlowaPage.java  ZaimkiPage.java
polular_test/src/test/java/ui_tests/: SmokeTest.java  SmokeTestCzasowniki.java  SmokeTestSlowa.java  TestData.java
polular_test/src/test/java/utils/: Log4Test.java  PropertyLoader.java
polular_test/src/test/resources/: application.properties  testng.xml
sesame/: pom.xml
sesame/proj/: btsync.html  minimal1.html
sesame/src/test/java/sesame/: ProjPage.java  SmokeTestSuite.java
sesame/src/test/resources/: sesame.properties
snap/: snap.hs
stretch/: .gitignore  .project  stretch.cabal
stretch/src/: Main.hs
(+3 files in other folders)
