name:           stretch
version:        0.1
cabal-version:  >=1.2
build-type:     Simple
author:         u

executable stretch
  hs-source-dirs:  src
  main-is:         Main.hs
  build-depends:   
                   base >= 4,
                   cryptohash >= 0.11.4,
                   bytestring >= 0.10.4,
                   base16-bytestring >= 0.1.1.6
  ghc-options:     -Wall

